RESOLVED FIXED41536
[Qt] Wrong method name in file Connection.h
https://bugs.webkit.org/show_bug.cgi?id=41536
Summary [Qt] Wrong method name in file Connection.h
Luiz Agostini
Reported 2010-07-02 13:19:06 PDT
[Qt] Wrong method name in file Connection.h
Attachments
Patch (1.15 KB, patch)
2010-07-02 13:21 PDT, Luiz Agostini
no flags
Luiz Agostini
Comment 1 2010-07-02 13:21:40 PDT
WebKit Commit Bot
Comment 2 2010-07-02 21:07:40 PDT
Comment on attachment 60396 [details] Patch Clearing flags on attachment: 60396 Committed r62430: <http://trac.webkit.org/changeset/62430>
WebKit Commit Bot
Comment 3 2010-07-02 21:07:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.