2010-07-02  Luiz Agostini  <luiz.agostini@openbossa.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] Wrong method name in file  Connection.h
        https://bugs.webkit.org/show_bug.cgi?id=41536

        Method openConnectionHandler was spelled as openConnection in class Connection.

        * Platform/CoreIPC/Connection.h:

Canonical link: https://commits.webkit.org/53345@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62430 268f45cc-cd09-0410-ab3c-d52691b4dbfc