WebKit2/Platform/CoreIPC/Connection.h
@@ -173,7 +173,7 @@ private:
     HANDLE m_connectionPipe;
 #elif PLATFORM(QT)
     // Called on the connection queue.
-    void openConnection();
+    void openConnectionHandler();
     void newConnectionHandler();
     void readyReadHandler();
 
